WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72444
[chromium] Fix flag name in chromium DumpRenderTree for accelerated video trigger
https://bugs.webkit.org/show_bug.cgi?id=72444
Summary
[chromium] Fix flag name in chromium DumpRenderTree for accelerated video tri...
James Robinson
Reported
2011-11-15 16:37:37 PST
[chromium] Fix flag name in chromium DumpRenderTree for accelerated video trigger
Attachments
Patch
(2.01 KB, patch)
2011-11-15 16:37 PST
,
James Robinson
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-11-15 16:37:55 PST
Created
attachment 115277
[details]
Patch
James Robinson
Comment 2
2011-11-15 16:38:23 PST
I goofed up this variable name, so currently this flag is ignored on the webkit_gpu_tests configuration.
James Robinson
Comment 3
2011-11-15 16:44:25 PST
Committed
r100368
: <
http://trac.webkit.org/changeset/100368
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug