[chromium] Fix flag name in chromium DumpRenderTree for accelerated video trigger https://bugs.webkit.org/show_bug.cgi?id=72444

Reviewed by Adam Barth.

* DumpRenderTree/chromium/DumpRenderTree.cpp:

Canonical link: https://commits.webkit.org/88901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100368 268f45cc-cd09-0410-ab3c-d52691b4dbfc